# halconScript

./: CMakeLists.txt
src/: CMakeLists.txt
src/MainUI/: CMakeLists.txt  mainui.cpp  mainui.h  mainui.ui
